--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cardano-sdk/core": "^0.45.8",
+    "@lighthouse-web3/sdk": "^0.3.7",
+    "@lucid-evolution/lucid": "^0.4.27",
     "@radix-ui/react-slot": "^1.2.0",
     "@types/crypto-js": "^4.2.2",
     "class-variance-authority": "^0.7.1",
@@ -17,7 +20,8 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-variants": "^1.0.0"
+    "tailwind-variants": "^1.0.0",
+    "web3.storage": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
